--- a/README
+++ b/README
@@ -2,5 +2,5 @@ Author: Maz
 Version: 1.0
 Copyright: Copyright (C) 2010 Maz
 
-This is a jQuery plugin for pagination with example php and html script. PHP and tml scripts are based on smarty and I am so lazy to make a normal script :P. Feel free to modify and use on your any project :) 
+This is a jQuery plugin for pagination with example php and html script. PHP and html scripts are based on smarty and I am so lazy to make a normal script :P. Feel free to modify and use on your any project :) 
 
