--- a/README
+++ b/README
@@ -1,6 +1,27 @@
-Author: Maz
-Version: 1.0
-Copyright: Copyright (C) 2010 Maz
+#-----------------------------------
+* @ Author: Mazharul Anwar(maz@protishobdo.com)
+* @ Homepage: http://protishobdo.com
+* @ Author Twitter: http://twitter.com/mazharul_anwar
+* @ Version : alpha
+* @ release date: DEC20, 2010
+* @ Thanks to : Farhan (mohd.farhan@integricity.com)
+#------------------------------------------------------------------------------------------
+
+Copyright (C) 2010  Mazharul Anwar(maz@protishobdo.com)
+
+    This program is free software: you can redistribute it and/or modify 
+    it under the terms of the GNU General Public License as published by 
+    the Free Software Foundation, either version 3 of the License, or 
+    (at your option) any later version. 
+
+    This program is distributed in the hope that it will be useful, 
+    but WITHOUT ANY WARRANTY; without even the implied warranty of 
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the 
+    GNU General Public License for more details. 
+
+    You should have received a copy of the GNU General Public License 
+    along with this program.  If not, see <http://www.gnu.org/licenses/>. 
+#-----------------------------------------------------------------------------------------------*/
 
 This is a jQuery plugin for pagination with example php and html script. PHP and html scripts are based on smarty and I am so lazy to make a normal script :P. Feel free to modify and use on your any project :) 
 
